# ChangeLog for dev-python/pycukes
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  02 Jul 2010; James Rowe <jnrowe@gmail.com> -pycukes-0.1.2.ebuild,
  pycukes-0.2.ebuild:
  Keyworded x86.

  02 Jul 2010; James Rowe <jnrowe@gmail.com> pycukes-0.2.ebuild:
  Keyworded amd64.

*pycukes-0.2 (02 Jun 2010)

  02 Jun 2010; James Rowe <jnrowe@gmail.com> +pycukes-0.2.ebuild:
  Version bump [bc9].

  21 Mar 2010; James Rowe <jnrowe@gmail.com> pycukes-0.1.2.ebuild:
  Added PYTHON_DEPEND setting.

  17 Dec 2009; James Rowe <jnrowe@gmail.com> -pycukes-0.1.1.ebuild,
  pycukes-0.1.2.ebuild:
  Keyworded x86.

*pycukes-0.1.2 (17 Nov 2009)

  17 Nov 2009; James Rowe <jnrowe@gmail.com> +pycukes-0.1.2.ebuild:
  Version bump [845].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Restrict tests until they are fixed upstream.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Set SUPPORT_PYTHON_ABIS [205].

  06 Nov 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Keyworded amd64 [c95].

  06 Nov 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Keyworded x86 [f56].

  18 Oct 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Converted script to use module_script_wrapper.

  14 Oct 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Switch to using jnrowe-pypi eclass.

  06 Oct 2009; James Rowe <jnrowe@gmail.com> -pycukes-0.1.ebuild:
  Removing obsolete ebuild.

  06 Oct 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.ebuild:
  Added missing dependency on dev-python/story_parser.

*pycukes-0.1.1 (06 Oct 2009)

  06 Oct 2009; James Rowe <jnrowe@gmail.com> +pycukes-0.1.1.ebuild:
  Version bump

  02 Oct 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.ebuild:
  Keyworded ~x86.

*pycukes-0.1 (02 Oct 2009)

  02 Oct 2009; James Rowe <jnrowe@gmail.com> +pycukes-0.1.ebuild,
  +metadata.xml: