@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST pycukes-0.2.tar.gz 10530 RMD160 221a8470ac81a7d798b2266d9bd959d018c18149 SHA1 f14e57b5566e09d7d44e44acbdb1b84ba90de8b0 SHA256 8794c599ebb28843c06784c3ebf991b2df6d5dafd10e67b78abf802ff515ce93
-EBUILD pycukes-0.2.ebuild 453 RMD160 00c908a236ebfa086183b149e03484da09592bc1 SHA1 d699bf3233ca77d5ee7b9f69e04dd1cde0db1ac9 SHA256 20296c64461a032875dea2e986f3db5a6a77476bc92adc96c8337a6b0a12dd13
-MISC ChangeLog 2025 RMD160 aaff3b27b23bd9825bc1f8758a190015358aab6e SHA1 a269123e7eb4615444aea0b95bd20921f432aa58 SHA256 eacbc7b67a6a621092d734919146fff12206af01e14cac8d3a4969efb433da8c
-MISC metadata.xml 840 RMD160 6b9494e85231d6441b957b9c09630f996891cc71 SHA1 e2f02a854f71bb2fe772138b643b0af2f0a01aa3 SHA256 69b5012b97c3b34ea0152ce416e666aec5a911302b158f6d0dac6f283c091d5d
+EBUILD pycukes-0.2.ebuild 454 RMD160 c9e6fb4826833e35d5cd05862972eba5e5f5c28c SHA1 47973ef9b083f073ae09741d9aab089800685d7c SHA256 284133e476696528d1bb23be7f904feab2ff12d5c510283013aa52613a4224ad
+MISC ChangeLog 2169 RMD160 ed9d6034c42080d3ce94f112eb0c838cfff584f6 SHA1 48fa4156bbb9a7e65e0f60f070346b32571c2980 SHA256 26222e24d7510c63364344b1173b2b9598ae91e559abf1c62e0bb5b1c4dc279b
+MISC metadata.xml 842 RMD160 07fcade84ce87261c67f9da152630cad917684c2 SHA1 cbe3e46b7a9c2999f750c2f97bd7094557a0de6d SHA256 c0057b20ab0162da80f266f432effd2520673a9cb81dded2433ece05c6248591
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyr4xsACgkQzJrj3cAXR0kPZQCgk3TvZLSDrl8tJOyfh9fcVX+1
-STgAoJK0aRD/9a18b+eXQ9W4Wlf+S358
-=SPMQ
+iEYEARECAAYFAkzXEsoACgkQzJrj3cAXR0mEZACglkbSGG1UWnBVK4B6xanTY0Mo
+PnEAmgOE8BVn6pA6cEGFoautujmadF3O
+=dq9d
 -----END PGP SIGNATURE-----
