@@ -3,7 +3,7 @@ dev-python/story_parser dev-python/pyhistorian >=app-admin/eselect-python-200912
 0
 mirror://pypi/p/pycukes/pycukes-0.2.tar.gz
 
-http://github.com/hugobr/pycukes
+https://github.com/hugobr/pycukes
 MIT
 A Cucumber-like BDD framework built on top of Pyhistorian
 amd64 x86
