@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Nov 2010; James Rowe <jnrowe@gmail.com> pycukes-0.2.ebuild,
+  metadata.xml:
+  Updated URL for GitHub's recent switch to HTTPS everywhere.
+
   06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
   Added remote-id to metadata.
 
